--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -9,7 +9,7 @@
         "@pages/*": ["components/pages/*"],
         "@hooks/*": ["hooks/*"],
         "@styles/*": ["styles/*"],
-        "@utils/*": ["utils/*"],
-      },
+        "@utils/*": ["utils/*"]
+      }
     }
 }
