--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -7,6 +7,7 @@
         "@atoms/*": ["components/atoms/*"],
         "@blocks/*": ["components/blocks/*"],
         "@pages/*": ["components/pages/*"],
+        "@constants/*": ["constants/*"],
         "@hooks/*": ["hooks/*"],
         "@styles/*": ["styles/*"],
         "@utils/*": ["utils/*"]
