:art: discover option 상태 전역으로 변경
local state -> recoil 사용

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -1,16 +1,17 @@
 {
-    "compilerOptions": {
-      "baseUrl": "src",
-      "paths": {
-        "@apis/*": ["apis/*"],
-        "@assets/*": ["assets/*"],
-        "@atoms/*": ["components/atoms/*"],
-        "@blocks/*": ["components/blocks/*"],
-        "@pages/*": ["components/pages/*"],
-        "@constants/*": ["constants/*"],
-        "@hooks/*": ["hooks/*"],
-        "@styles/*": ["styles/*"],
-        "@utils/*": ["utils/*"]
-      }
+  "compilerOptions": {
+    "baseUrl": "src",
+    "paths": {
+      "@apis/*": ["apis/*"],
+      "@assets/*": ["assets/*"],
+      "@atoms/*": ["components/atoms/*"],
+      "@blocks/*": ["components/blocks/*"],
+      "@pages/*": ["components/pages/*"],
+      "@constants/*": ["constants/*"],
+      "@hooks/*": ["hooks/*"],
+      "@recoil/*": ["recoil/*"],
+      "@styles/*": ["styles/*"],
+      "@utils/*": ["utils/*"]
     }
+  }
 }
