--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-error-boundary": "^3.1.4",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
+    "recoil": "^0.7.6",
     "styled-components": "^5.3.5",
     "typescript": "^4.8.2",
     "web-vitals": "^2.1.4"
